--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <div class="modal-overlay" id="modal">
     <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="modal-title">
       <button class="modal-close" aria-label="Close card">&times;</button>
-      <div id="modal-title">Get Well Soon Sneha Mommy💖</div>
+      <div id="modal-title">Get Well Soon Himali Mommy💖</div>
     </div>
   </div>
 
